--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,10 @@
     <string name="app_name">QuestNavigasiUI</string>
     <string name="submit">Submit</string>
     <string name="back">Back</string>
-    <string name="nama_lengkap">NAMA LENGKAP</string>
-    <string name="jenis_kelamin">JENIS KELAMIN</string>
-    <string name="alamat">ALAMAT</string>
-    <string name="tampil">Tampilan Data</string>
-    <string name="home">Form Isian</string>
+    <string name="nama_lengkap">Nama Lengkap</string>
+    <string name="jenis_kelamin">Jenis Kelamin</string>
+    <string name="alamat">Alamat</string>
+    <string name="laki">Laki-laki</string>
+    <string name="wanita">Perempuan</string>
+    <string name="detail">Detail</string>
 </resources>
