--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="submit">Submit</string>
     <string name="back">Back</string>
     <string name="nama_lengkap">Nama Lengkap</string>
-    <string name="jenis_kelamin">Jenis Kelamin</string>
+    <string name="gender">Jenis Kelamin</string>
     <string name="alamat">Alamat</string>
     <string name="laki">Laki-laki</string>
     <string name="wanita">Perempuan</string>
